style.css
body {
	background: #fff;
	font: 16px 'Open Sans', Helvetica, Arial, sans-serif;
	line-height: 1.4;
	margin: 0 0;
	margin-bottom: 100px;
}
em {
	color: #999;
}
p {
	line-height: 1.6;
	font-size: 90%;
}

a {
	color: #2C85B1;
	text-decoration: none;
	font-weight: 400;
}
ul {
	margin-bottom: 0;
}
section {
	margin: 1em 0 2em;
}
blockquote {
	margin: 0;
	margin-bottom: 1em;
}
#resume {
	margin: 2em 2em 2em 2.5em;
	max-width: 760px;
}

/* Resume heading */
.heading header {

}

.heading header h1 {
	font-size: 180%;
	margin: 0.5em 0;
	font-weight: 600;
}

.heading header h2 {
	font-size: 140%;
	margin: 0;
	font-weight: 400;
}

.heading header .contact .detail {
	margin: 0 1em 0 0;
}

.profile {
	display: inline-block;
	margin: 0 1em 0 0;
}

.profile strong,
.profile span {
	display: inline-block;
	margin: 0 1em 0 0;
}
/* section / line breaks */
section h2 {
	font-size: 140%;
	margin: 0 0 1em;
	text-transform: uppercase;
	color: #BC1B39;
	font-weight: 400;
}

/* Experience items */
.item {
	margin: 0 0 1em;
	padding: 0 0 1em;
	border-bottom: 1px solid #F2EBEC;
}

.item:last-child {
	border-bottom: none;
}


.item header h3 {
	margin: 0.2em 1em 0.2em 0;
	display: inline-block;
	font-weight: 600;
}

.item header a {
	display: inline-block;
}

.item .position {
	font-weight: 600;
	font-size: 100%;
	margin: 0.2em 1em 0.2em 0;
}

.item .startDate,
.item .endDate {
	color: #6B6B6B;
}

.item .highlights {
	list-style: square;
	font-size: 90%;
}

/* skills */
#skills .item {
	margin: 0.5em 0;
	padding: 0 0 0.5em;
	font-size: 90%;
	display: flex;
	align-items: center;
}
#skills .item .name {
	font-weight: 600;
	display: inline-block;
	text-transform: uppercase;
	margin: 0 1em 0 0;
	width: 23%;
	vertical-align: top;
}

#skills .item .level {
	display: inline-block;
	height: 16px;
	width: 26px;
	vertical-align: top;
	text-align: center;
	transform: rotate(90deg);
	font-size: 2em;
	letter-spacing: -3px;
}
#skills .item .level.Novice::after       {content: "•"}
#skills .item .level.Intermediate::after {content: "••"}
#skills .item .level.Expert::after       {content: "•••"}
#skills .item .level.Novice::after       {opacity: 0.3;}
#skills .item .level.Expert::after       {color: green;}
#skills .item .keywords {
	display: inline-block;
	width: calc( 70% - 16px );
	vertical-align: top;
}

/* education */
#education .item {
	display: inline-block;
	vertical-align: top;
	width: 49.5%;
	border-bottom: 0;
}

